# gsa_geothermal

./: .gitignore  Coefficient_matrix_TWI.py  Import_and_Replace.py  ReferenceVSsimplified.ipynb  ReferenceVSsimplified.py  ReferenceVSsimplified_test_cases.py  ReferenceVSsimplified_test_cases_plot.py  ReferenceVsLiterature_CC_calc.py  ReferenceVsLiterature_CC_plot.py  ReferenceVsSimplified_UDDGP_and_HSD_calc.py  ReferenceVsSimplified_UDDGP_and_HSD_calc_and_plot.py  ReferenceVsSimplified_UDDGP_and_HSD_plot.py  ReferenceVsSimplified_UDDGP_and_HSD_plot_old.py  ReferenceVsSimplified_calc.ipynb  ReferenceVsSimplified_calc.py  ReferenceVsSimplified_plot.py  ReferenceVsSimplified_plot_Goldschmidt.py  ReferenceVsSimplified_plot_Pearson-Spearman.py  ReferenceVsSimplified_plot_multi_thresholds.py  ReferenceVsSimplified_plot_r2.py  ReferenceVsSimplified_test_cases_calc.py  ReferenceVsSimplified_test_cases_calc_and_plot-FOR_SETAC.py  ReferenceVsSimplified_test_cases_calc_and_plot.py  ReferenceVsSimplified_test_cases_calc_and_plot_ch4.py  Replace.py  Run_all_calcs_multiprocessing.py  Sobol_plot.py  Sobol_plot_2.py  Trying dask.ipynb  Untitled.ipynb  carbon_footprint_test_cases.py  cge_klausen.py  cge_klausen_Hellisheidi.py  cge_klausen_LT.py  cge_klausen_test_cases.py  cge_klausen_test_cases_CC.py  cge_lca.py  cge_lca_Hellisheidi.py  cge_model.py  cge_model_NoRounding.py  (+26 more)
.pylint.d/: ReferenceVsSimplified_plot1.stats  ReferenceVsSimplified_plot_multi_thresholds1.stats
archived/: 5.4.1_run_lca_UDDGP.py  7.0_run_general_model_all_categories.py  7.0_run_simplified_model.py  (+8 more)
(+544 files in other folders)
