[metadata]
# replace with your username:
name = gsa-geothermal
version = 0.1.dev1
author = Andrea Paulillo
author_email = andrea.paulillo@ucl.ac.uk
description = Global sensitivity analysis for conventional and enhanced geothermal power plants
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-pau/gsa_geothermal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
# TODO random seed in klausen
install_requires =
    klausen
    presamples
    dask
    dask_jobqueue
    SALib
    sympy
    seaborn
    plotly
    kaleido
